--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
                         </p>
                     </div>
                     <div class="col-md-3 txtcenter">
-                        <img src="img/dev_enricofraccaioli.png" height="100px" />
+                        <img src="img/dev_enricofraccaroli.png" height="100px" />
                         <br />
                         <p style="font-size:18px;font-weight:200;color:#5e5e5e">
                             <b>Developer</b>
                         </p>
                         <p style="font-weight:200;color:#5e5e5e">
                             <i class="fa fa-user" aria-hidden="true"></i>
-                            Enrico Fraccaioli
+                            Enrico Fraccaroli
                             <br />
                             <i class="fa fa-university" aria-hidden="true"></i>
                             Univ. of Verona.
@@ -250,12 +250,12 @@
                     </div>
                     <div class="col-md-3 txtcenter" style="padding-top:20px;">
                         <i class="fa fa-user same-line c-white" aria-hidden="true"></i>
-                        <p class="os-text same-line c-yellow"> Enrico Fraccaioli</p>
+                        <p class="os-text same-line c-yellow"> Enrico Fraccaroli</p>
                         <br />
                         <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
                         <p class="os-text c-whitey same-line">
-                            <a class="os-2text a-no" href="mailto:enrico.fraccaioli@univr.it" style="color:#f9f9fa;text-decoration:underline">
-                                enrico.fraccaioli@univr.it
+                            <a class="os-2text a-no" href="mailto:enrico.fraccaroli@univr.it" style="color:#f9f9fa;text-decoration:underline">
+                                enrico.fraccaroli@univr.it
                             </a>
                         </p>
                         <br />
