--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
                 <div class="row col-md-12 pt-5">
                     <div class="col-md-5 txt-left mt-7">
                         <h1 class="m-title c-white wow fadeIn"><b>MentOS</b></h1>
-                        </br>
-                        </br>
+                        <br />
+                        <br />
                         <p class="s-title c-white wow fadeIn">
                             An educational open source
-                            </br>
+                            <br />
                             32-bit linux-like Operating System
                         </p>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
                         <p class="s-title c-white wow fadeIn" style="font-weight:200">
                             University of Verona
-                            </br>
+                            <br />
                             <a href="http://www.di.univr.it/?ent=cs&id=420&lang=en" style="color:#f9f9fa;text-decoration:underline">
                                 Department of Computer Science
                             </a>
                         </p>
-                        </br>
+                        <br />
                     </div>
                     <div class="col-md-7 txtcenter wow bounceInRight" style="padding-top:35px">
-                        </br>
-                        </br>
+                        <br />
+                        <br />
                         <img class="img-fluid" src="img/mentos.png" />
                     </div>
                 </div>
@@ -101,56 +101,67 @@
         <!-- Main content -->
         <div class="bg-light" style="padding-top:50px;padding-bottom:50px;">
             <div class="container">
+                <div class="txtcenter">
+                    <h2 class="p-title">DOCUMENTATION</h2>
+                    <p class="os-2text">
+                        Step-by-step guides for understandig the MentOS Operating System.
+                    </p>
+                    <p>
+                        <a class="os-2text" target="_blank" href="doc/fundamental_concepts.pdf">
+                            MentOS - Fundamental concept
+                        </a>
+                    </p>
+                    <p>
+                        <a class="os-2text" target="_blank" href="doc/process_management.pdf">
+                            MentOS - Process management
+                        </a>
+                    </p>
+                    <p>
+                        <a class="os-2text" target="_blank" href="doc/memory_management.pdf">
+                            MentOS - Memory management
+                        </a>
+                    </p>
+                    <br />
+                </div>
+                <div class="b-divider-line"></div>
                 <div class="justify-content-center wow fadeIn">
                     <div class="col-md-12 mt-5" style="margin-top:0px!important">
+                        <br />
                         <div class="row mt-5" style="margin-top:0px!important">
                             <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
-                                <h2 class="p-title">WHAT IS</h2>
-                                </br>
+                                <h2 class="p-title">WHAT</h2>
                                 <p class="os-2text">
-                                    MentOS is an open source educational 32-bit linux-like Operating System, which integrates the basic
-                                    functionalities of an OS, ideal for an University-level course.
-                                    </br>
-                                    MentOS, which stands for Mentoring OS, is the successor of DreamOS, an
-                                    Operating System developed by Ivan Gualandri, Finarfin and many others, which
-                                    can be found at <a href="https://github.com/inuyasha82/DreamOs"> DreamOS on GitHub</a>.
+                                    MentOS, which stands for Mentoring OS, is an open source educational Operating System.
                                 </p>
-                                </br>
-                                <h2 class="p-title">DOCUMENTATION</h2>
+                                <h2 class="p-title">GOAL</h2>
                                 <p class="os-2text">
-                                    Step-by-step guides for understandig the MentOS Operating System.
+                                    The goal of MentOS is to provide a project environment that is realisticenough to show how a real Operating System work,
+                                    yet simple enoughthat students can understand and modify it in significant ways.
                                 </p>
-                                <ul>
-                                    <li>
-                                        <a class="os-2text" target="_blank" href="doc/fundamental_concepts.pdf">
-                                            MentOS - Fundamental concept
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="os-2text" target="_blank" href="doc/process_management.pdf">
-                                            MentOS - Process management
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="os-2text" target="_blank" href="doc/memory_management.pdf">
-                                            MentOS - Memory management
-                                        </a>
-                                    </li>
-                                </ul>
+                                <h2 class="p-title">WHY</h2>
+                                <p class="os-2text">
+                                    There are so many operating systems, why did we write MentOs?
+                                    <br />
+                                    It is true, there are a lot of education operating system, BUT how many of them follow the the guide line defined by Linux?
+                                    Linux shareswith MentOs the same data structures, fields, algorithms, ...  it has a sourcecode well documented not
+                                    requiring hours to be compiled on your laptop!
+                                    <br />
+                                    MentOS team aimed at this, you can download MentOS and you are readyto start in a few minutes, search any its data structure with Google,
+                                    and you will find it in Linux.
+                                <br />
                             </div>
                             <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
                                 <h2 class="p-title">LICENSE</h2>
-                                </br>
                                 <p class="os-2text">
                                     © Copyright 2018-2019 ESD Group - Department of Computer Science - University
                                     of Verona.
-                                    </br>
+                                    <br />
                                     Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction,
                                     including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished
                                     to do so, subject to the following conditions:
                                     The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-                                    </br>
-                                    </br>
+                                    <br />
+                                    <br />
                                     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
                                     IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
                                     OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
