Change license, some doc, photo and emails

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
         </nav>
         <!-- End navbar menu -->
         <!-- Home container-->
-        <div class="bg-blue">
+        <div class="bg-blue" style="height:550px">
             <div class="container">
                 <div class="row col-md-12 pt-5">
                     <div class="col-md-5 txt-left mt-7">
+                        <br />
                         <h1 class="m-title c-white wow fadeIn"><b>MentOS</b></h1>
                         <br />
                         <br />
@@ -63,18 +64,6 @@
                             <br />
                             32-bit linux-like Operating System
                         </p>
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <p class="s-title c-white wow fadeIn" style="font-weight:200">
-                            University of Verona
-                            <br />
-                            <a href="http://www.di.univr.it/?ent=cs&id=420&lang=en" style="color:#f9f9fa;text-decoration:underline">
-                                Department of Computer Science
-                            </a>
-                        </p>
-                        <br />
                     </div>
                     <div class="col-md-7 txtcenter wow bounceInRight" style="padding-top:35px">
                         <img class="img-fluid" src="img/mentos.png" />
@@ -88,10 +77,6 @@
         <div class="col-12 txtcenter same-line">
             <div class="txtcenter">
                 <img src="img/logo_linux.png" class="img-h" />
-                <a href="http://www.univr.it/jsp/index.jsp">
-                    <img src="img/logo_univr.png" class="img-p" />
-                </a>
-                <img src="img/logo_esd.png" class="img-h" style="margin-right:10px" />
                 <img src="img/logo_github.png" class="img-h" />
             </div>
         </div>
@@ -130,39 +115,56 @@
                                 <h2 class="p-title">WHAT</h2>
                                 <p class="os-2text">
                                     MentOS, which stands for Mentoring OS, is an open source educational Operating System.
+                                    MentOS can be freely downloaded from a public github repository.
                                 </p>
+                                <br />
                                 <h2 class="p-title">GOAL</h2>
                                 <p class="os-2text">
                                     The goal of MentOS is to provide a project environment that is realisticenough to show how a real Operating System work,
                                     yet simple enoughthat students can understand and modify it in significant ways.
                                 </p>
+                                <br />
                                 <h2 class="p-title">WHY</h2>
                                 <p class="os-2text">
                                     There are so many operating systems, why did we write MentOs?
                                     <br />
-                                    It is true, there are a lot of education operating system, BUT how many of them follow the the guide line defined by Linux?
-                                    Linux shareswith MentOs the same data structures, fields, algorithms, ...  it has a sourcecode well documented not
-                                    requiring hours to be compiled on your laptop!
                                     <br />
-                                    MentOS team aimed at this, you can download MentOS and you are readyto start in a few minutes, search any its data structure with Google,
-                                    and you will find it in Linux.
+                                    It is true, there are a lot of education operating system, BUT how many of them follow the guideline defined by Linux?
+                                    <br />
+                                    MentOs aims to have the same Linux’s data structures and algorithms. It has a well-documented source code, and you can compile it on your laptopin a few seconds!
+                                    <br />
+                                    <br />
+                                    If you are a beginner in Operating-System developing, perhaps MentOS isthe right operating system to start with.
                                 <br />
                             </div>
                             <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
                                 <h2 class="p-title">LICENSE</h2>
                                 <p class="os-2text">
-                                    © Copyright 2018-2019 ESD Group - Department of Computer Science - University
-                                    of Verona.
-                                    <br />
-                                    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction,
-                                    including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished
-                                    to do so, subject to the following conditions:
-                                    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+                                    MIT License.
                                     <br />
                                     <br />
-                                    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-                                    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
-                                    OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+                                    Copyright (c) 2019 Alessandro Danese, Enrico Fraccaroli, Luigi Capogrosso, Mirco De Marchi.
+                                    <br />
+                                    <br />
+                                    Permission is hereby granted, free of charge, to any person obtaining a copy
+                                    of this software and associated documentation files (the "Software"), to deal
+                                    in the Software without restriction, including without limitation the rights
+                                    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+                                    copies of the Software, and to permit persons to whom the Software is
+                                    furnished to do so, subject to the following conditions:
+                                    <br />
+                                    <br />
+                                    The above copyright notice and this permission notice shall be included in all
+                                    copies or substantial portions of the Software.
+                                    <br />
+                                    <br />
+                                    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+                                    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+                                    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+                                    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+                                    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                                    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+                                    SOFTWARE.
                                 </p>
                             </div>
                             <br />
@@ -251,8 +253,8 @@
                         <br />
                         <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
                         <p class="os-text c-white same-line">
-                            <a class="os-2text a-no" href="mailto:alessandro.danese@univr.it" style="color:#f9f9fa;text-decoration:underline">
-                                alessandro.danese@univr.it
+                            <a class="os-2text a-no" href="mailto:danese.aless@gmail.com" style="color:#f9f9fa;text-decoration:underline">
+                                danese.aless@gmail.com
                             </a>
                         </p>
                         <br />
@@ -263,8 +265,8 @@
                         <br />
                         <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
                         <p class="os-text c-whitey same-line">
-                            <a class="os-2text a-no" href="mailto:enrico.fraccaroli@univr.it" style="color:#f9f9fa;text-decoration:underline">
-                                enrico.fraccaroli@univr.it
+                            <a class="os-2text a-no" href="mailto:enry.frak@gmail.com" style="color:#f9f9fa;text-decoration:underline">
+                                enry.frak@gmail.com
                             </a>
                         </p>
                         <br />
@@ -275,8 +277,8 @@
                         <br />
                         <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
                         <p class="os-text c-white same-line">
-                            <a class="os-2text a-no" href="mailto:luigi.capogrosso@outlook.it" style="color:#f9f9fa;text-decoration:underline">
-                                luigi.capogrosso@outlook.it
+                            <a class="os-2text a-no" href="mailto:luigicapogrosso@outlook.it" style="color:#f9f9fa;text-decoration:underline">
+                                luigicapogrosso@outlook.it
                             </a>
                         </p>
                         <br />
@@ -287,8 +289,8 @@
                         <br />
                         <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
                         <p class="os-text c-white same-line">
-                            <a class="os-2text a-no" href="mailto:mirco.demarchi@outlook.com" style="color:#f9f9fa;text-decoration:underline">
-                                mirco.demarchi@outlook.com
+                            <a class="os-2text a-no" href="mailto:mircodemarchi@outlook.com" style="color:#f9f9fa;text-decoration:underline">
+                                mircodemarchi@outlook.com
                             </a>
                         </p>
                         <br />
@@ -296,7 +298,7 @@
                 </div>
                 <div class="w-divider-line"></div>
                 <div class="row col-lg-12">
-                    <p class="os-2text c-white"> © Copyright 2018-2019 ESD Group - Department of Computer Science - University of Verona </p>
+                    <p class="os-2text c-white"> Copyright (c) 2019 Alessandro Danese, Enrico Fraccaroli, Luigi Capogrosso, Mirco De Marchi. </p>
                 </div>
             </div>
         </footer>
