--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
         <!-- End navbar menu -->
         <!-- Home container-->
-        <div class="bg-blue" style="height:550px">
+        <div class="bg-blue">
             <div class="container">
                 <div class="row col-md-12 pt-5">
                     <div class="col-md-5 txt-left mt-7">
@@ -245,7 +245,7 @@
         <footer class="bg-blue" style="padding-top:50px;">
             <div class="container" id="footer">
                 <h2 class="txtcenter p-title" style="color:#f9f9fa!important;">CONTACTS</h2>
-                <div class="row col-md-12 txtcenter" style="padding-top:20px;padding-bottom:50px;">
+                <div class="row col-md-12" style="padding-top:20px;padding-bottom:50px;">
                     <div class="col-md-3 txtcenter" style="padding-top:20px;">
                         <i class="fa fa-user same-line c-white" aria-hidden="true"></i>
                         <p class="os-text same-line c-yellow"> Alessandro Danese</p>
