Update project links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link os" href="#team">Development Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link os" target="_blank" href="https://github.com/luigicapogrosso/MentOS">GitHub</a>
+                        <a class="nav-link os" target="_blank" href="https://github.com/mentos-team/MentOS">GitHub</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link os" href="#footer">Contacts</a>
