Added emails addres and ShinyStat

--- a/index.html
+++ b/index.html
@@ -257,6 +257,14 @@
                             </a>
                         </p>
                         <br />
+                        <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
+                        <p class="os-text c-white same-line" style="font-size:14px;">
+                            <a class="os-2text a-no" href="mailto:alessandro.danese@univr.it" style="color:#f9f9fa;text-decoration:underline">
+                                alessandro.danese@univr.it
+                            </a>
+                        </p>
+                        <br />
+                        <br />
                     </div>
                     <div class="col-md-3 txtcenter" style="padding-top:20px;">
                         <i class="fa fa-user same-line c-white" aria-hidden="true"></i>
@@ -268,6 +276,14 @@
                                 enry.frak@gmail.com
                             </a>
                         </p>
+                        <br />
+                        <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
+                        <p class="os-text c-white same-line" style="font-size:14px;">
+                            <a class="os-2text a-no" href="mailto:enrico.fraccaroli@univr.it" style="color:#f9f9fa;text-decoration:underline">
+                                enrico.fraccaroli@univr.it
+                            </a>
+                        </p>
+                        <br />
                         <br />
                     </div>
                     <div class="col-md-3 txtcenter" style="padding-top:20px;">
@@ -281,6 +297,14 @@
                             </a>
                         </p>
                         <br />
+                        <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
+                        <p class="os-text c-white same-line" style="font-size:14px;">
+                            <a class="os-2text a-no" href="mailto:luigi.capogrosso@studenti.univr.it" style="color:#f9f9fa;text-decoration:underline">
+                                luigi.capogrosso@studenti.univr.it
+                            </a>
+                        </p>
+                        <br />
+                        <br />
                     </div>
                     <div class="col-md-3 txtcenter" style="padding-top:20px;">
                         <i class="fa fa-user same-line c-white" aria-hidden="true"></i>
@@ -293,11 +317,27 @@
                             </a>
                         </p>
                         <br />
+                        <i class="fa fa-envelope same-line c-white" aria-hidden="true"></i>
+                        <p class="os-text c-white same-line" style="font-size:14px;">
+                            <a class="os-2text a-no" href="mailto:mirco.demarchi@studenti.univr.it" style="color:#f9f9fa;text-decoration:underline">
+                                mirco.demarchi@studenti.univr.it
+                            </a>
+                        </p>
+                        <br />
+                        <br />
                     </div>
                 </div>
                 <div class="w-divider-line"></div>
                 <div class="row col-lg-12">
                     <p class="os-2text c-white"> Copyright (c) 2019 Alessandro Danese, Enrico Fraccaroli, Luigi Capogrosso, Mirco De Marchi. </p>
+                    <br />
+                    <!-- Inizio Codice ShinyStat -->
+                    <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=luigicapogrosso"></script>
+                    <noscript>
+                        <a href="http://www.shinystat.com/it/" target="_top">
+                        <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=luigicapogrosso" alt="Contatore accessi gratuito" style="border:0px" /></a>
+                    </noscript>
+                    <!-- Fine Codice ShinyStat -->
                 </div>
             </div>
         </footer>
