Fixed ShinyStat position

--- a/index.html
+++ b/index.html
@@ -331,14 +331,16 @@
                 <div class="row col-lg-12">
                     <p class="os-2text c-white"> Copyright (c) 2019 Alessandro Danese, Enrico Fraccaroli, Luigi Capogrosso, Mirco De Marchi. </p>
                     <br />
-                    <!-- Inizio Codice ShinyStat -->
-                    <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=luigicapogrosso"></script>
-                    <noscript>
-                        <a href="http://www.shinystat.com/it/" target="_top">
-                        <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=luigicapogrosso" alt="Contatore accessi gratuito" style="border:0px" /></a>
-                    </noscript>
-                    <!-- Fine Codice ShinyStat -->
                 </div>
+            </div>
+            <div class="row col-lg-12">
+                <!-- Inizio Codice ShinyStat -->
+                <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=luigicapogrosso"></script>
+                <noscript>
+                    <a href="http://www.shinystat.com/it/" target="_top">
+                    <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=luigicapogrosso" alt="Contatore accessi gratuito" style="border:0px" /></a>
+                </noscript>
+                <!-- Fine Codice ShinyStat -->
             </div>
         </footer>
         <!-- End footer-->
