--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <br />
                 </div>
             </div>
-            <div class="row col-lg-12">
+            <div class="row col-lg-12 txtcenter">
                 <!-- Inizio Codice ShinyStat -->
                 <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=luigicapogrosso"></script>
                 <noscript>
