--- a/index.html
+++ b/index.html
@@ -333,14 +333,16 @@
                     <br />
                 </div>
             </div>
-            <div class="row col-lg-12 txtcenter">
-                <!-- Inizio Codice ShinyStat -->
-                <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=luigicapogrosso"></script>
-                <noscript>
-                    <a href="http://www.shinystat.com/it/" target="_top">
-                    <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=luigicapogrosso" alt="Contatore accessi gratuito" style="border:0px" /></a>
-                </noscript>
-                <!-- Fine Codice ShinyStat -->
+            <div class="row txtcenter">
+                <div class="col-12 txtcenter">
+                    <!-- Inizio Codice ShinyStat -->
+                    <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=luigicapogrosso"></script>
+                    <noscript>
+                        <a href="http://www.shinystat.com/it/" target="_top">
+                        <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=luigicapogrosso" alt="Contatore accessi gratuito" style="border:0px" /></a>
+                    </noscript>
+                    <!-- Fine Codice ShinyStat -->
+                </div>
             </div>
         </footer>
         <!-- End footer-->
