Update with syscall management and deadlock prevention doc

--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                             MentOS - Memory management
                         </a>
                     </p>
+                    <p>
+                        <a class="os-2text" target="_blank" href="doc/syscall_management.pdf">
+                            MentOS - Syscall management
+                        </a>
+                    </p>
+                    <p>
+                        <a class="os-2text" target="_blank" href="doc/deadlock_prevention.pdf">
+                            MentOS - Deadlock Prevention
+                        </a>
+                    </p>
                     <br />
                 </div>
                 <div class="b-divider-line"></div>
