--- a/index.html
+++ b/index.html
@@ -88,37 +88,37 @@
         <div class="container">
             <div class="txtcenter">
                 <h2 class="p-title">Documentation</h2>
-                <h4 class="p-title">General Documentation</h4>
-                <p class="os-2text">
-                    Step-by-step guides for understandig the MentOS Operating System.
-                </p>
-                <p>
-                    <a class="os-2text" target="_blank" href="doc/fundamental_concepts.pdf">
-                        Pt1 - Fundamental concept
-                    </a>
-                </p>
-                <p>
-                    <a class="os-2text" target="_blank" href="doc/process_management.pdf">
-                        Pt2 - Process management
-                    </a>
-                </p>
-                <p>
-                    <a class="os-2text" target="_blank" href="doc/memory_management.pdf">
-                        Pt3 - Memory management
-                    </a>
-                </p>
-                <h4 class="p-title">Exercise 1 - Deadlock Prevention</h4>
-                <p>
-                    <a class="os-2text" target="_blank" href="doc/ex1_pt1_syscall_management.pdf">
-                        Pt1 - Syscall management
-                    </a>
-                </p>
-                <p>
-                    <a class="os-2text" target="_blank" href="doc/ex1_pt2_deadlock_prevention.pdf">
-                        Pt2 - Deadlock Prevention
-                    </a>
-                </p>
-                <br>
+                <div class="row mt-5" style="margin-top:0px!important">
+                    <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
+                        <h4 class="p-title">Operating System course material</h4>
+                        <ol>
+                            <li><a class="os-2text" target="_blank" href="doc/1_c_programming.pdf"> C Programming</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/2_fundamental_concepts.pdf">Fundamental Concepts</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/3_filesystem.pdf">Filesystem</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/4_process.pdf">Processes</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/5_IPC_semaphores_shared_memory.pdf">IPC : System V concept and Semaphores</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/6_IPC_system_v_message_queue.pdf">IPC : Shared Memory and Message Queue</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/7_IPC_signal_pipe_fifo.pdf">IPC : Signal, Pipe, and Fifo</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/8_real_time_scheduler_basics.pdf">Real-time Scheduler</a></li>
+                        </ol>
+                    </div>
+                    <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
+                        <h4 class="p-title">MentOS course material</h4>
+                        <ol>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_1_fundamental_concepts.pdf">Fundamental Concepts</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_2_process_management.pdf">Process Management</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_3_real_time_scheduler.pdf">Real-time Scheduler</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_4_memory_management.pdf">Memory Management</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_5_system_call.pdf">System-Call</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_6_timers.pdf">Timers</a></li>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_7_signals.pdf">Signals</a></li>
+                        </ol>
+                        <h4 class="p-title">MentOS exercies</h4>
+                        <ol>
+                            <li><a class="os-2text" target="_blank" href="doc/mentos_example_1_deadlock_prevention.pdf">Deadlock prevention</a></li>
+                        </ol>
+                    <br>
+                </div>
             </div>
             <div class="b-divider-line"></div>
             <div class="justify-content-center wow fadeIn">
@@ -126,17 +126,17 @@
                     <br>
                     <div class="row mt-5" style="margin-top:0px!important">
                         <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
-                            <h2 class="p-title">WHAT</h2>
+                            <h2 class="p-title">What</h2>
                             <p class="os-2text">
                                 MentOS, which stands for Mentoring OS, is an open source educational Operating System.
                             </p>
                             <br>
-                            <h2 class="p-title">GOAL</h2>
+                            <h2 class="p-title">Goal</h2>
                             <p class="os-2text">
                                 The goal of MentOS is to provide a project environment that is realistic enough to show how a real Operating System work, yet simple enough that students can understand and modify it in significant ways.
                             </p>
                             <br>
-                            <h2 class="p-title">WHY</h2>
+                            <h2 class="p-title">Why</h2>
                             <p class="os-2text">
                                 There are so many operating systems, why did we write MentOs?
                                 <br>
@@ -147,7 +147,7 @@
                                 <br>
                         </div>
                         <div class="col-md-6 mt-5" style="text-align:justify;margin-top:0px!important">
-                            <h2 class="p-title">LICENSE</h2>
+                            <h2 class="p-title">License</h2>
                             <p class="os-2text">
                                 MIT License.
                                 <br>
@@ -168,6 +168,7 @@
                     </div>
                 </div>
             </div>
+            <div class="b-divider-line"></div>
         </div>
     </div>
     <!-- End main content -->
@@ -175,7 +176,7 @@
     <!-- <i class="fa fa-university" aria-hidden="true"></i> Univ. of Verona. -->
     <div style="padding-top:50px;padding-bottom:100px;">
         <div class="container" id="team">
-            <h2 class="p-title">ACTIVE DEVELOPERS</h2>
+            <h2 class="p-title">Active Developers</h2>
             <div class="row col-md-16 mt-4 txtcenter">
                 <div class="col-md-3 txtcenter">
                     <img src="img/dev_enricofraccaroli.png" height="100px" />
@@ -195,7 +196,7 @@
             </div>
             <br>
             <br>
-            <h2 class="p-title">PREVIOUS DEVELOPERS</h2>
+            <h2 class="p-title">Previous Developers</h2>
             <div class="row col-md-16 mt-4 txtcenter">
                 <div class="col-md-3 txtcenter">
                     <img src="img/dev_alessandrodanese.png" height="100px" />
