--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <li><a class="os-2text" target="_blank" href="doc/mentos_6_timers.pdf">Timers</a></li>
                             <li><a class="os-2text" target="_blank" href="doc/mentos_7_signals.pdf">Signals</a></li>
                         </ol>
-                        <h4 class="p-title">MentOS exercies</h4>
+                        <h4 class="p-title">MentOS Exercises</h4>
                         <ol>
                             <li><a class="os-2text" target="_blank" href="doc/mentos_example_1_deadlock_prevention.pdf">Deadlock prevention</a></li>
                         </ol>
@@ -178,27 +178,32 @@
     <!-- <i class="fa fa-university" aria-hidden="true"></i> Univ. of Verona. -->
     <div style="padding-top:50px;padding-bottom:100px;">
         <div class="container" id="team">
-            <h2 class="p-title">Active Developers</h2>
+
+            <h2 class="p-title">Project Manager</h2>
             <div class="row col-md-16 mt-4 txtcenter">
                 <div class="col-md-3 txtcenter">
                     <img src="img/dev_enricofraccaroli.png" height="100px" />
                     <p class="dev-name"> Enrico Fraccaroli </p>
                     <p class="dev-role"> Project Manager & Developer </p>
                 </div>
-                <div class="col-md-3 txtcenter">
-                    <img src="img/dev_generic.png" height="100px" />
-                    <p class="dev-name"> Daniele Nicoletti </p>
-                    <p class="dev-role"> Developer </p>
-                </div>
-                <div class="col-md-3 txtcenter">
-                    <img src="img/dev_generic.png" height="100px" />
-                    <p class="dev-name"> Filippo Ziche </p>
-                    <p class="dev-role"> Developer </p>
-                </div>
             </div>
             <br>
+            <h2 class="p-title">Advisors</h2>
+            <div class="col-md-3 txtcenter">
+                <img src="img/advisor.png" height="100px" />
+                <p class="dev-name"> Tiziano Villa </p>
+                <p class="dev-role"> Academic Advisor </p>
+            </div>
+
+            <!--
+            <h2 class="p-title">Active Developers</h2>
+            <div class="row col-md-16 mt-4 txtcenter">
+                
+            </div>
             <br>
-            <h2 class="p-title">Previous Developers</h2>
+            -->
+
+            <h2 class="p-title">Previous Contributors</h2>
             <div class="row col-md-16 mt-4 txtcenter">
                 <div class="col-md-3 txtcenter">
                     <img src="img/dev_alessandrodanese.png" height="100px" />
@@ -228,6 +233,16 @@
                 <div class="col-md-3 txtcenter">
                     <img src="img/dev_generic.png" height="100px" />
                     <p class="dev-name"> Marco Berti </p>
+                    <p class="dev-role"> Developer </p>
+                </div>
+                <div class="col-md-3 txtcenter">
+                    <img src="img/dev_generic.png" height="100px" />
+                    <p class="dev-name"> Daniele Nicoletti </p>
+                    <p class="dev-role"> Developer </p>
+                </div>
+                <div class="col-md-3 txtcenter">
+                    <img src="img/dev_generic.png" height="100px" />
+                    <p class="dev-name"> Filippo Ziche </p>
                     <p class="dev-role"> Developer </p>
                 </div>
             </div>
