--- a/index.html
+++ b/index.html
@@ -188,13 +188,21 @@
                 </div>
             </div>
             <br>
-            <h2 class="p-title">Advisors</h2>
-            <div class="col-md-3 txtcenter">
-                <img src="img/advisor.png" height="100px" />
-                <p class="dev-name"> Tiziano Villa </p>
-                <p class="dev-role"> Academic Advisor </p>
-            </div>
 
+            <h2 class="p-title">Advisors</h2>
+            <div class="row col-md-16 mt-4 txtcenter">
+                <div class="col-md-3 txtcenter">
+                    <img src="img/advisor.png" height="100px" />
+                    <p class="dev-name"> Tiziano Villa </p>
+                    <p class="dev-role"> Academic Advisor </p>
+                </div>
+                <div class="col-md-3 txtcenter">
+                    <img src="img/advisor.png" height="100px" />
+                    <p class="dev-name"> Graziano Pravadelli </p>
+                    <p class="dev-role"> Academic Advisor </p>
+                </div>
+            </div>
+            <br>
             <!--
             <h2 class="p-title">Active Developers</h2>
             <div class="row col-md-16 mt-4 txtcenter">
@@ -203,7 +211,7 @@
             <br>
             -->
 
-            <h2 class="p-title">Previous Contributors</h2>
+            <h2 class="p-title">Previous Developers</h2>
             <div class="row col-md-16 mt-4 txtcenter">
                 <div class="col-md-3 txtcenter">
                     <img src="img/dev_alessandrodanese.png" height="100px" />
